corrected wrapping of 'images with info' section

--- a/foundations/css-exercises/project/landing-page/style.css
+++ b/foundations/css-exercises/project/landing-page/style.css
@@ -18,32 +18,30 @@ header {
 
 .header-container {
     display: flex;
-    justify-content: space-between;
-    text-align: center;
-    margin: 0 13%;
+    justify-content: space-around;
     padding: 10px 0;
     align-items: center;
 }
 
 .header-logo {
+    text-align: center;
     color: #F9FAF8;
     font-size: 24px;
 }
 
-nav {
-    display: flex;
-    justify-content: center;
-}
-
 nav ul {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     list-style: none;
     font-size: 18px;
 }
 
 nav ul li {
-    width: 30%;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    width: 33.333%;
+    margin: 0 25px;
 }
 
 nav ul li a {
@@ -107,25 +105,15 @@ h1 {
 
 
 /* --------------- Images with info section --------------- */
+.images-with-info {
+    text-align: center;
+}
+
 h2 {
     font-size: 36px;
     font-weight: 700;
     margin: 30px 0;
     color: #1f2937;
-}
-
-.images-with-info {
-    text-align: center;
-}
-
-.images-with-info ul {
-    display: flex;
-    justify-content: center;
-}
-
-li {
-    list-style: none;
-    width: 17.5%;
 }
 
 .images-with-info img {
@@ -134,6 +122,30 @@ li {
     border: 5px solid #3883f6;
     border-radius: 10px;
     margin: 10px;
+}
+
+.image-section {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 35px;
+    justify-content: center;
+}
+
+.image-section div {
+    margin: 0 20px;
+}
+
+.list-container {
+    display: flex;
+}
+
+li {
+    list-style: none;
+}
+
+.list-container li p {
+    width: 150px;
+    margin: 0 auto;
 }
 
 
@@ -169,8 +181,8 @@ section cite {
 
 
 /* --------------- Call to action --------------- */
-.call-to-action {
-    /* padding: 0 70px; */
+.call-to-action section {
+    margin: 0 15px;
 }
 
 .action-section {
@@ -179,7 +191,7 @@ section cite {
     background-color: #3883f6;
     color: white;
     align-items: center;
-    padding: 40px 0;
+    padding: 40px 20px;
     border-radius: 10px;
     margin: 0 17.5%;
 }
@@ -188,7 +200,7 @@ section cite {
 .bottom-sign-up-button {
     color: #fff;
     background-color: #3882f6;
-    border: 1px solid white;
+    border: 2px solid white;
     padding: 8px 25px;
     border-radius: 5px;
     text-align: center;
